src/test/deca/context/invalid/Objet/extends_type.deca
// Description:
//    test de faire extension d'un type
//
// Resultats:
//  10:6: The extended class  int must be of type class
//
// Historique:
//    cree le 20/01/2022

class A extends int {
    int i ;
    
}

{}



